--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Perl-Metrics-Halstead
 
 {{$NEXT}}
-    - Clean up module syntax.
+    - Clean up module syntax and POD.
 
 0.0201 2019-03-17 01:49:49
     - Improve test cases.
