--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Perl-Metrics-Halstead
 
 {{$NEXT}}
     - Fix annoying typo.
+    - Drop the unknown "min_volume" metric and revert the level computation.
 
 0.0400 2019-03-17 17:03:21
     - Add test case for a bogus file.
