--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Perl-Metrics-Halstead
 
 {{$NEXT}}
+    - Add the eg/analyze example program.
+    - Add my write-up link to the documentation.
 
 0.0600 2019-03-18 16:20:19
     - Add missing tokens to skip and classify as an operand.
