Move analyze to halstead

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Perl-Metrics-Halstead
 
 {{$NEXT}}
     - Fix comment skipping logic.
+    - Turn eg/analyze into bin/halstead with Getopt::Long goodness.
 
 0.0602 2019-03-28 00:45:12
     - Improve documentation.
