--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl-Metrics-Halstead
 
 {{$NEXT}}
+    - Reinstate the MinimumPerl plugin.
 
 0.0609 2020-03-21 18:31:41
     - Clean up module code a bit.
