--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl-Metrics-Halstead
 
 {{$NEXT}}
+    - Update SEE ALSO link.
 
 0.0613 2021-03-15 10:07:21
     - Fix up the bin/halstead program slightly.
