Add change item

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Perl-Metrics-Halstead
 
 {{$NEXT}}
     - Make eg/git-halstead visualize git revisions.
+    - Improve test file.
 
 0.0614 2022-01-26 10:52:04
     - Update link to write-up.
