--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl-Metrics-Halstead
 
 {{$NEXT}}
+    - Add the eg/self.pl program.
 
 0.0617 2022-10-23 15:35:17
     - Avoid implicit imports.
