--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl-Metrics-Halstead
 
 {{$NEXT}}
+    - Fix the eg/self.pl program.
 
 0.0619 2025-05-16 23:29:52
     - Fix bin/halstead.
